fixed horizontal overflow on ios

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -327,6 +327,7 @@ body,
 html {
   width: 100vw;
   -webkit-overflow-scrolling: touch;
+  overflow-y: hidden;
 }
 
 body {
